# aie5_midterm

./: AIM Midterm.pdf:Zone.Identifier  LICENSE
app_testing/: fine_tune_embeddings.ipynb  pyproject.toml  rag_eval.ipynb  specter-people-db--export_small.csv
midterm_app/: Dockerfile  app.py  requirements.txt  state.py
