[project]
name = "Midterm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "langchain-experimental>=0.3.4",
    "langchain>=0.3.19",
    "langchain-cohere>=0.4.2",
    "langchain-openai>=0.3.7",
    "qdrant-client>=1.13.2",
    "rank-bm25>=0.2.2",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "chainlit>=1.0.0",
    "requests>=2.31.0",
    "langchain-community>=0.0.31",
    "duckduckgo-search==5.3.1b1",
    "pandas>=2.1.4",
    "langgraph==0.2.61",
    "nltk>=3.9.1",
    "numpy>=2.2.2",
    "ragas==0.2.10",
    "unstructured>=0.14.8",
    "accelerate>=1.3.0",
    "beautifulsoup4>=4.13.3",
    "datasets>=3.2.0",
    "faiss-cpu>=1.10.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "langchain-core>=0.3.34",
    "langchain-huggingface>=0.1.2",
    "langchain-text-splitters>=0.3.6",
    "lxml>=5.3.1",
    "pyarrow>=19.0.0",
    "pymupdf>=1.25.3",
    "python-pptx==1.0.2",
    "sentence-transformers>=3.4.1",
    "transformers[torch]>=4.48.3",
    "wandb>=0.19.6",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.3.0",
    "tqdm>=4.65.0",
    "typing-extensions>=4.5.0",
    "aiohttp>=3.9.0",
]
